--- a/newsweek.html
+++ b/newsweek.html
@@ -439,8 +439,92 @@
 								</li>
 							</ul>
 
-							<div>
+							<div class="ml-auto">
 								<a href="#" class="social-media-btn">Sign up For The Newsletter</a>
+							</div>
+						</div>
+
+						<div class="display-title">Recent Issues</div>
+
+						<div class="row recent-issues">
+							<div class="col-md-3 no-border">
+								<a href="#"><img src="http://s.newsweek.com/sites/www.newsweek.com/files/styles/embed-xs/public/2017/04/27/2017_05_05_cover_768_x_1024.jpg" class="img-fluid"></a>
+
+								<div class="bullet">May 05 Issue</div>
+								<ul>
+									<li>
+										<a href="#">What War With North Korea Looks Like</a>
+									</li>
+
+									<li>
+										<a href="#">How a Robot Worm Could Make Colonoscopies Fun (Really)</a>
+									</li>
+
+									<li>
+										<a href="#">CIA Drone Strike Nearly Killed Head of Al-Qaeda</a>
+									</li>
+								</ul>
+							</div>
+							
+							<div class="col-md-3 no-border">
+								<a href="#"><img src="http://s.newsweek.com/sites/www.newsweek.com/files/styles/embed-xs/public/2017/04/18/20170428cover1800-x-2400.jpg" class="img-fluid"></a>
+
+								<div class="bullet">April 28 Issue</div>
+								<ul>
+									<li>
+										<a href="#">Uncle Sam Wants You…to Be a Racist!</a>
+									</li>
+
+									<li>
+										<a href="#">Haiti's Sexual Violence Survivors Make Themselves Seen</a>
+									</li>
+
+									<li>
+										<a href="#">Is Alexei Navalny the Kremlin's Kryptonite?</a>
+									</li>
+								</ul>
+							</div>
+
+							<div class="col-md-3 no-border">
+								<a href="#"><img src="http://s.newsweek.com/sites/www.newsweek.com/files/styles/embed-xs/public/2017/04/11/20170421cover1800x-2400.jpg" class="img-fluid"></a>
+
+								<div class="bullet">April 21 Issue</div>
+								<ul>
+									<li>
+										<a href="#">Can James Comey Escape the Clinton Email Debacle?</a>
+									</li>
+
+									<li>
+										<a href="#">Can James Comey Untangle the Trump-Russia Allegations?</a>
+									</li>
+
+									<li>
+										<a href="#">Can Ukraine Win Over Pro-Russian Citizens in the East?</a>
+									</li>
+								</ul>
+							</div>
+
+							<div class="col-md-3 no-border">
+								<a href="#"><img src="http://s.newsweek.com/sites/www.newsweek.com/files/styles/embed-xs/public/2017/04/04/20170414cover1800-x-2400.jpg" class="img-fluid"></a>
+
+								<div class="bullet">April 14 Issue</div>
+								<ul>
+									<li>
+										<a href="#">How Harvard Flunked Economics</a>
+									</li>
+
+									<li>
+										<a href="#">Meet the Billionaires Who Run Trump's Government</a>
+									</li>
+
+									<li>
+										<a href="#">Developing 'Smart' Skin That Can Feel, Stretch and Heal</a>
+									</li>
+								</ul>
+							</div>
+
+							<div class="browse-btn">
+								<a href="#">Browse Archives</a>
 							</div>
 						</div>
 					</div>
